--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,7 @@
     <jacoco.threshold.line>0.95</jacoco.threshold.line>
     <jacoco.threshold.class>0.95</jacoco.threshold.class>
 
-    <jackson.version>2.10.3</jackson.version>
-    <jackson-datatype-jsr310.version>2.12.2</jackson-datatype-jsr310.version>
+    <jackson.version>2.12.3</jackson.version>
     <junit.version>5.6.0</junit.version>
     <klint.version>0.40.0</klint.version>
     <kotlin.version>1.4.31</kotlin.version>
@@ -55,7 +54,7 @@
     <dependency>
       <groupId>com.fasterxml.jackson.datatype</groupId>
       <artifactId>jackson-datatype-jsr310</artifactId>
-      <version>${jackson-datatype-jsr310.version}</version>
+      <version>${jackson.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
