--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -21,4 +21,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          mvn -q -s settings.xml deploy
+          mvn -q deploy
