--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -21,4 +21,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          mvn -q deploy
+          git config user.email "actions@github.com"
+          git config user.name "GitHub Actions"
+          mvn -q -s settings.xml -B release:prepare release:perform
+          git push origin master:release
