--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -23,5 +23,5 @@ jobs:
         run: |
           git config user.email "actions@github.com"
           git config user.name "GitHub Actions"
-          mvn -q -s settings.xml -B release:prepare release:perform
+          mvn -q -B release:prepare release:perform
           git push origin master:release
