--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -23,4 +23,5 @@ jobs:
         run: |
           git config user.email "actions@github.com"
           git config user.name "GitHub Actions"
+          git pull
           mvn -q -B release:prepare release:perform
